[package]
name = "renderling_ui"
version = "0.2.2"
edition = "2018"
description = "A WGPU rendering pipeline for user interfaces"
repository = "https://github.com/schell/renderling"
license = "MIT OR Apache-2.0"
keywords = ["shader", "gui", "texture", "rendering"]
categories = ["rendering", "game-development", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
wasm = ["wgpu/webgl", "renderling_core/wasm"]

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
renderling_core = { path = "../core", version = "^0.1.3" }
tracing = "^0.1"
tracing-log = "^0.1"
wgpu = { version = "^0.14", features = ["spirv"] }

[build-dependencies]
renderling_build = { path = "../build", version = "^0.1" }
