[package]
name = "wgsly-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
bench = false

[dependencies]
naga.workspace = true
proc-macro2.workspace = true
quote = "1.0"
syn.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
