[package]
name = "renderling-pbr-shader"
version = "0.1.0"
edition = "2021"
authors = ["Schell Carl Scivally <efsubenovex@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics", "shader", "rendering"]
categories = ["rendering", "game-development", "graphics"]
description = "User interface forward shader for the renderling project"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderling-shader = { path = "../../crates/renderling-shader", default-features = false, features = ["gpu"] }
spirv-std = { version = "0.5", features = ["glam"] }